tests/paczka1/fuzzy1/57455970.err
Error in line 3: xWuxwb A?37 52,5
Error in line 7: xWuxwb S323 32,9
Error in line 19: xWuxwb A837 [9,5
Error in line 16: xWuxwb A898 7,8
Error in line 20: xWuxwb A837 62,2
Error in line 25: FEh10VNbVm A898 96,2
Error in line 28: FEh10VNbVm S323 40,2
